# r3

./: .gitignore  AGENTIC_TUNING_SUMMARY.md  ANNOTATION_INTEGRATION_SUMMARY.md  Apptainer.def  Dockerfile  LITERATURE_REVIEW_SUMMARY.txt  MODELS_BENCHMARKS_SUMMARY.md  PROJECT_SUMMARY.txt  README.md  main.py  pyproject.toml
benchmarks/: benchmark_config.yaml  run_benchmark.py
configs/: dvc.yaml  mlflow_config.yaml  nextflow.config  pipeline_config.yaml  preprocessing_contract.json  wandb_config.yaml
experiments/: agentic_config.json  best_config.json  experiment_log.csv
literature/: README.md  concept_lineage.md  contradictions.md  elevator_pitch.md  hidden_assumptions.md  knowledge_map.md  methodology_comparison.md  paper_catalog.md  research_gaps.md  synthesis.md
results/: agentic_report_run_20260322_084705_90160b8e.md  evaluation_run_20260322_084705_90160b8e.yaml  pipeline_summary.json
results/tables/: annotation_comparison.csv  baseline_benchmarks.csv  celltype_distribution.csv  dataset_summary.csv  integration_metrics.csv
src/: __init__.py  checkpoints.py  cli.py  config.py
src/agentic/: __init__.py  autoresearch_agent.py  config.py  contract_enforcer.py  dask_tuner.py  experiment_runner.py  ray_tuner.py  report_generator.py  search_space.py
src/annotation/: __init__.py  cell_ontology.py  celltypist_annotator.py  consensus.py  marker_based.py  pseudobulk.py
src/data/: __init__.py  download.py  storage.py
src/evaluation/: __init__.py  experiment_tracker.py  metrics.py  splits.py  statistical_tests.py
src/integration/: __init__.py  harmony.py  scanvi_integration.py  scvi_integration.py
src/models/: __init__.py  classical_baselines.py  multimodal_fusion.py  scgpt_wrapper.py
src/preprocessing/: __init__.py  ambient_rna.py  batch_info.py  doublet_removal.py  normalization.py  pipeline.py  qc.py
tests/: __init__.py  test_agentic.py  test_annotation.py  test_config.py  test_evaluation.py  test_integration.py  test_models.py  test_preprocessing.py
workflows/: Snakefile  main.nf
workflows/modules/: annotation.nf  download.nf  evaluation.nf  integration.nf  pseudobulk.nf  qc.nf
